fix(popup): restore opacity and visibility for popup and content

--- a/Natours/starter/scss/components/_popup.scss
+++ b/Natours/starter/scss/components/_popup.scss
@@ -6,8 +6,8 @@
     left: 0;
     background-color: rgba($color-black, 0.8);
     z-index: 9999;
-    // opacity: 0;
-    // visibility: hidden;
+    opacity: 0;
+    visibility: hidden;
     transition: all 0.3s;
     transform: scale(0.5);
     transition-delay: 0.3s;
@@ -51,7 +51,7 @@
         border-radius: 3px;
         display: flex;
         overflow: hidden;
-        // opacity: 0;
+        opacity: 0;
         transform: translate(-50%, -50%) scale(0.5);
         transition: all 0.4s 0.2s;
     }
